# damai-atx-grab

./: .atomcode.md  .gitignore  AGENTS.md  README.md  check_all_clickable.py  check_bottom.py  check_bottom_full.py  check_confirm_page.py  check_current.py  check_current_page.py  check_page.py  check_structure.py  check_where.py  check_xml.py  config.jsonc  debug_activity_trace.py  debug_adb_activity.py  debug_full.py  debug_latency.py  debug_page.py  dump_clickable.py  dump_current.py  dump_main_content.py  dump_price_detail.py  dump_price_region.py  dump_tree.py  pyproject.toml  test_click_submit.py  test_long_press.py  test_output.txt  test_perform.py  test_run.txt  test_submit.py  test_touch.py
.mimocode/: .cron-lock
.mimocode/plans/: 1783512830237-gentle-orchid.md
scripts/: 1.txt  check_env.bat  dump_page_xml.bat  dump_page_xml.py  page_dump_20260705_215338.xml  start_grab.bat  start_gui.bat
src/: config_loader.py  coord_blind.py  damai_share_parser.py  element_locator.py  image_fallback.py  logger.py  main.py  main_gui.py  phase_machine.py  safety_guard.py  sprint.py  time_sync.py
src/actions/: __init__.py  search_show.py  select_city.py  select_date.py  select_price.py  select_viewers.py
src/gui/: app.py  fetcher.py  worker.py
tests/: test_config_loader.py  test_coord_blind.py  test_damai_share_parser.py  test_sprint.py  test_time_sync.py
