[project]
name = "damai-atx-grab"
version = "2.0.0"
description = "大麦网抢票 - 真机方案 ATX 高性能版"
requires-python = ">=3.11"
dependencies = [
    "uiautomator2>=4.0",
    "airtest>=1.4",
    "loguru>=0.7",
    "ntplib>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
